[tool.poetry]
name = "scikit-mpe"
version = "0.1.0"
description = "Minimal path extraction using the fast marching method"
authors = ["Eugene Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
keywords = ["mpe", "fmm", "minimal-path", "fast-marching", "fast-marching-method"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

repository = "https://github.com/espdev/mpe"
documentation = "https://scikit-mpe.readthedocs.io/en/latest"

packages = [
    { include = "skmpe" },
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
scipy = "^1.4.1"
scikit-fmm = "^2019.1.30"
pydantic = "^1.4"

# tests
pytest = { version = "^5.3.5", optional = true }
pytest-cov = { version = "^2.8.1", optional = true }
coveralls = { version = "^1.10.0", optional = true }
scikit-image = { version = "^0.16.2", optional = true }

# docs
sphinx = { version = "^2.3.1", optional = true }
matplotlib = { version = "^3.1.3", optional = true }
numpydoc = { version = "^0.9.2", optional = true }
m2r = { version = "^0.2.1", optional = true }
toml = { version = "^0.10.0", optional = true }

[tool.poetry.extras]
tests = ["pytest", "pytest-cov", "coveralls", "scikit-image"]
docs = ["sphinx", "numpydoc", "m2r", "matplotlib", "toml"]

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-colors = "^0.1.6"

pytest = "^5.3.5"
pytest-benchmark = "^3.2.3"
pytest-cov = "^2.8.1"
coveralls = "^1.10.0"

sphinx = "^2.3.1"
numpydoc = "^0.9.2"
toml = "^0.10.0"
matplotlib = "^3.1.3"
scikit-image = "^0.16.2"
m2r = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
