[tool.poetry]
name = "scikit-mpe"
version = "0.2.3"
description = "Minimal path extraction using the fast marching method"
authors = ["Eugene Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
keywords = ["mpe", "fmm", "minimal-path", "fast-marching", "fast-marching-method", "scikit"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

repository = "https://github.com/espdev/scikit-mpe"
documentation = "https://scikit-mpe.readthedocs.io/en/latest"

packages = [
    { include = "skmpe" },
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
scipy = "^1.4.1"
scikit-fmm = "^2021.1.21"
pydantic = "^1.4"
importlib-metadata = "^1.6.0"

# docs
sphinx = { version = "^2.3.1", optional = true }
numpydoc = { version = "^0.9.2", optional = true }
m2r = { version = "^0.2.1", optional = true }
matplotlib = { version = "^3.1.3", optional = true }
scikit-image = { version = "^0.16.2", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-colors = "^0.1.6"

pytest = "^5.3.5"
pytest-cov = "^2.8.1"
coveralls = "^1.10.0"

scikit-image = "^0.16.2"

[tool.poetry.extras]
docs = ["sphinx", "numpydoc", "m2r", "matplotlib", "scikit-image"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
